- Fixed reverse column order when playing with self - IDs are now 4 character long - Improved style.css -- Changed font sizes -- Increased line spacing -- Added title, start-options, board-header classes -- Fixed board headers aligned to the left (now center) - Now the image is smaller and stored here - Fixed game page not refreshing automatically - Increased space between start options and the image -- Start options are now in a div - Changed the link texts in index.html - Fixed "это" instead of "этот" in invite.html - Added instructions to play_with_friend.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,20 @@
 body {
     background-color: #F0F0F0;
+    font-size: 25px;
+    line-height: 2;
+}
+
+.title {
+    font-size: 40px;
+}
+
+.start-options {
+    height: 180px;
+}
+
+.board-header {
+    font-size: 20px;
+    text-align: center;
 }
 
 .move-button {
